--- a/assets/style.css
+++ b/assets/style.css
@@ -2,8 +2,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
     padding-top: 90px;
-    padding-left: 20px
-    padding-right: 20px
+    padding-left: 20px;
+    padding-right: 20px;
   }
   
   button {
